Archive2/f3/9219fc5048524d/output
main.cpp: In function 'int main()':
main.cpp:16:5: error: static assertion failed: B is not trivial
     static_assert (std::is_trivial<B>::value, "B is not trivial");
     ^
